Add oai-to-dpla to akara.conf

--- a/akara.conf
+++ b/akara.conf
@@ -104,6 +104,7 @@ MODULES = [
     "dplaingestion.akamod.select-id",
     "dplaingestion.akamod.shred",
     "dplaingestion.akamod.geocode",
+    "dplaingestion.akamod.oai-to-dpla"
     ]
 
 ### Section 3: Other module configuration goes here
